infra/k8s/manual/00-namespace-and-config.yaml
# yaml-language-server: $schema=https://kubernetesjsonschema.dev/v1.30.0-standalone/v1/Namespace.json
apiVersion: v1
kind: Namespace
metadata:
  name: atlas
  labels:
    name: atlas
    app.kubernetes.io/name: atlas
    app.kubernetes.io/part-of: atlas-system
